[package]
name = "dhcplib"
version = "0.1.0"
authors = ["soofff@gmail.com"]
edition = "2018"

[features]
default = ["macaddr/std"]
with_serde = ["serde", "ascii/serde", "macaddr/serde_std"]
messaging = ["default", "rand"]

[dependencies]
macaddr = { version = "1.0" }
ascii = { version = "1.0" }
serde = { version = "1.0", features = ["derive"], optional = true }
rand = { version = "0.8", optional = true }